--- a/index.html
+++ b/index.html
@@ -1,8 +1,81 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Ramon Riping</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <p>Halo Gais</p>
+        <!-- Biodata Ramon -->
+        <div class="header" id="header">
+            <ul>
+                <li><a href="#tentang">Tentang</a></li>
+                <li><a href="#biodata">Biodata</a></li>
+                <li><a href="#riwayat">Riwayat</a></li>
+                <li><a href="#kontak">Kontak</a></li>
+            </ul>
+        </div>
+        <hr>
+        <div class="tentang" id="tentang">
+        <img src="Ramon.jpg" alt="Ramon" width="500px">
+        <h1>Tentang Saya</h1>
+        <p> Nama saya adalah Ramon Riping, orang lain memanggil saya Ramon. Sekarang saya sedang belajar
+            sebagai mahasiswa di <mark>Institut Teknologi Sumatera (ITERA)</mark>. Saya merupakan mahasiswa
+            angkatan 2022 di bidang program studi Teknik Informatika. Saya bangga menjadi bagian
+            dari komunitas <i>Teknik Informatika ITERA</i>.</p>
+        </div>
+        <hr>
+        <div class="biodata" id="biodata">
+        <table border="1">
+            <thead><h3>BIODATA SAYA</h3></thead>
+            <tr>
+                <td><b>Nama</b></td>
+                <td>Ramon Riping</td>
+            </tr>
+            <tr>
+                <td><b>NIM</b></td>
+                <td>122140078</td>
+            </tr>
+            <tr>
+                <td><b>Umur</b></td>
+                <td>19 Tahun</td>
+            </tr>
+            <tr>
+                <td><b>Tempat/Tanggal Lahir</b></td>
+                <td>Jakarta, 3-12-2003</td>
+            </tr>
+            <tr>
+                <td><b>Alamat</b></td>
+                <td>Bandarlampung</td>
+            </tr>
+            <tr>
+                <td><b>Alamat</b></td>
+                <td>Bandarlampung</td>
+            </tr>
+            <tr>
+                <td><b>Jenis Kelamin</b></td>
+                <td>Laki-laki</td>
+            </tr>
+            <tr>
+                <td><b>Agama</b></td>
+                <td>Kristen</td>
+            </tr>
+        </table>
+    </div>
+        <hr>
+        <div class="riwayat" id="riwayat">
+        <h3>RIWAYAT PENDIDIKAN</h3>
+        <ul>
+            <li><b>Teknik Informatika</b> <a href="https://www.itera.ac.id/" target="_blank">ITERA</a> (2022-Sekarang)</li>
+            <li><b>Jurusan Matematika & Ilmu Pengetahuan Alam (MIPA)</b> <a href="https://id.wikipedia.org/wiki/SMA_Xaverius_Bandar_Lampung" target="_blank">SMA Xaverius Pahoman Bandarlampung</a> (2019-2022)</li>
+        </ul>
+        </div>
+        <hr>
+        <div class="header-kontak" id="header-kontak">
+        <h3>Kontak</h3>
+        </div>
+        <div class="kontak" id="kontak">
+            <div class="wa"><a href "https://wa.me/625896835780/" target="_blank"><img src="Whatsappimg.png"></a></div>
+            <div class="ig"><a href "https://www.instagram.com/monnn__03/" target="_blank"><img src="instagramimg.png"></a></div>
+        </div>
     </body>
 </html>
